# BananaDB

./: .gitignore  Cargo.toml  README.md  clean.sh  config.toml
global/: TableMap.json
src/: lib.rs  main.rs  todo.rs
src/FileSystem/: mod.rs
src/config/: mod.rs
src/io_manager/: mod.rs
src/io_manager/cache_system/: lru_list.rs  mod.rs  resource.rs
src/io_manager/file_system/: mod.rs
src/item/: page.rs
tests/: test_filemanager.rs
